--- a/front/About.html
+++ b/front/About.html
@@ -24,8 +24,8 @@
     </header>
     <div class="contact">
         <div class="text">
-           <h1>Youcode n'est pas seulement une école, c'est un style de vie </h1>
-           <p>Bienvenue chers youcoders , youcode ne concerne pas seulement le codage, mais aussi l'amélioration d'autres compétences, et il n'y a pas de meilleur moyen que de rejoindre l'un de ses clubs,  vous pouvez trouvez plusieur type de club 'social, sport, art, envirement, robotic ...'</p>
+           <h1>About Youcode Clubs </h1>
+           <p>Welcome dear youcoders, youcode is not only about coding, but also about improving other skills, and there is no better way than to join one of its clubs, you can find many types of clubs 'social, sport, art, envirement, robotic...'</p>
         </div>
         <div class="slideshow-container">
 
@@ -41,9 +41,9 @@
               <img src="https://scontent.frak2-1.fna.fbcdn.net/v/t39.30808-6/284481942_1112766759304491_7859679368961855505_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeHujXXiu2Jjdn-hbUqi2ggdA4GUXEiIAHQDgZRcSIgAdMNa7NQ4EFgztYEJDyHPZW6W0vzNVDpeKQqSoRxwKPVf&_nc_ohc=bvY1n7EYp3UAX_DBRO-&_nc_ht=scontent.frak2-1.fna&oh=00_AfC0B26_NFj2QuJrIg1tp6WfGjZikcrqKibH71zgDeGr4A&oe=637428E9" style="width:100%">
             </div>
             <div style="text-align:center">
-                <span class="dot"></span> 
-                <span class="dot"></span> 
-                <span class="dot"></span> 
+                <div class="dot"></div> 
+                <div class="dot"></div> 
+                <div class="dot"></div> 
               </div>
         </div>
     </div>
