--- a/front/member.html
+++ b/front/member.html
@@ -11,14 +11,21 @@
     </head>
 <body>
     <div class="container">
-        <h1>YC Clubs Admin</h1>
-        <form action="admin.html">
-                <input placeholder="Username"  />
-                <input placeholder="Password"  />
+        <h1>Affecter Club a Kenza </h1>
+        <form action="apprennant.html">
+                <select>
+                    <option>
+                        YC Clubs
+                    </option>
+                    <option>
+                        YC Art
+                    </option>
+                </select>
+                <input placeholder="Role"  />
                 <br>
-                <button>Sign In</button>
+                <button>Done</button>
         </form> 
-        <a href="index.html">Go back</a>
+        <a href="apprennant.html">Go back</a>
     </div>
 </body>
 </html>
