--- a/front/newclub.html
+++ b/front/newclub.html
@@ -11,14 +11,24 @@
     </head>
 <body>
     <div class="container">
-        <h1>YC Clubs Admin</h1>
+        <h1>YC Clubs</h1>
         <form action="admin.html">
-                <input placeholder="Username"  />
-                <input placeholder="Password"  />
+                <input placeholder="Logo"  />
+                <input placeholder="Name"  />
+                <select>
+                    <option>
+                        Categorie
+                    </option>
+                    <option>
+                        Art
+                    </option>
+                </select>
+                <input placeholder="Date" type="date"  />
+                <textarea placeholder="Discription"  cols="5">Discription</textarea>
                 <br>
-                <button>Sign In</button>
+                <button>Done</button>
         </form> 
-        <a href="index.html">Go back</a>
+        <a href="admin.html">Go back</a>
     </div>
 </body>
 </html>
