--- a/front/admin.html
+++ b/front/admin.html
@@ -27,10 +27,10 @@
             <a href="apprennant.html">Apprenants</a>
         </div>
         <div class="name"><span>Admin</span><a href="newclub.html">
-                <i class='fa fa-plus'></i></a></div> 
+                <i class='fa fa-plus'></i></a>
                 <a href="index.html">
             <i class='fa fa-sign-out'></i></a>
-            
+            </div> 
     </header>
     
     <div class="cont">
