--- a/YCclubs/About.html
+++ b/YCclubs/About.html
@@ -16,11 +16,11 @@
             <img src="images/YC Clubs.png"/>
         </div>
         <div class="nav">
-            <a href="index.html" >Clubs</a>
+            <a href="index.php" >Clubs</a>
             <a href="About.html" style="color: #0384EE;">About</a>
             <a href="contact.html" >Contact</a>
         </div>
-        <a href="login.html"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
+        <a href="login.php"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
     </header>
     <div class="contact">
         <div class="text">
